--- a/resume.tex
+++ b/resume.tex
@@ -7,7 +7,7 @@
 % Kontakt info
 %===============================================================================
 \contactinfo{Carsten Jørgensen}
-{Senior Software Engineer}
+{Senior Software Engineer og Arkitekt}
 {Badstuestræde 18D, 1th}
 {1209 København K}
 {+45 2971 2097}
@@ -17,7 +17,7 @@
 % Introduktion
 %==============================================================================
 \section{Kort fortalt}
-25 års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (6 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling. Jeg har arbejdet som projektleder, scrum master og løsningsarkitekt. Men jeg vender altid tilbage til udviklerrollen, som er det, jeg brænder allermest for.
+25+ års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (7 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling. Jeg har arbejdet som projektleder, scrum master og løsningsarkitekt. Men jeg vender altid tilbage til udviklerrollen, som er det, jeg brænder allermest for.
 
 %==============================================================================
 % Erhvervserfaring
@@ -26,27 +26,27 @@
 \section{Erhvervserfaring}
 
 \job{Senior Software Developer}{CBB Mobil}{Maj 2020 --}
-{Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af ca. 650000 kunder.
+{Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af 650000 kunder.
 }
 {
-\opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ.}
+\opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ}
 }
 
 \job{Senior Risk Manager}{P+, Pension for \\Akademikere}{Juni 2019 -- April 2020}
-{Som senior softwareudvikler indefor risikostyring udvikler jeg software til
+{Som senior softwareudvikler indefor risikostyring udviklede jeg software i Python til
 }
 {
-\opgave{visualisering af finansielle data}
-\opgave{matematiske modeller til finansiel risikostyring}
-\opgave{opsætning af devops CI/CD pipelines baseret på BitBucket, Bamboo og Docker Swarm}
+\opgave{visualisering og rapportering af finansielle data}
+\opgave{matematiske modeller til finansiel risikostyring (VaR og Solvens II)}
+\opgave{opsætning af devops CI/CD pipelines baseret på BitBucket, Bamboo og Docker}
 }
 
 \job{Chief Software Engineer}{Danske Bank, C\&I}{Jan 2016 -- Maj 2019}
-{Ansat i Derivative Risk and IT, hvor jeg arbejder med 360-graders udvikling af}
+{Ansat i Derivative Risk and IT, hvor jeg arbejdede med 360-graders udvikling af}
 {
-\opgave{realtids rapportering til eksterne myndigheder af regulatoriske krav}
-\opgave{eksponering af bankens softwareløsning som en service for eksterne kunder}
-\opgave{matematiske modeller til finansiel risikostyring}
+\opgave{realtids rapportering til eksterne myndigheder af regulatoriske krav (MiFID II)}
+\opgave{eksponering af bankens Post-Trade løsning som SaaS for eksterne kunder}
+\opgave{matematiske modeller til finansiel risikostyring (VaR)}
 }
 
 \job{Løsningsarkitekt}{Danmarks Nationalbank}{Nov 2014 -- Dec 2015} %chktex 8
@@ -102,7 +102,7 @@ Liv og Pension}
 \section{Uddannelse}
 \uddannelse{Softwareudvikling}{2002 -- 2006}{IT Universitetet. Kurser i database og distribuerede systemer, algoritmer og datastrukturer, programmeringssprog samt avanceret objekt-orienteret programmering} %chktex 8
 \\[0.25cm]
-\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance program. Vært Marco Avellaneda. Modtager af Andersens Rejselegat for Matematikere}
+\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance. Vært Marco Avellaneda. Modtager af Andersens Rejselegat for Matematikere}
 \\[0.25cm]
 \uddannelse{Erasmus program}{1992 -- 1993}{University of Leeds, England. Anvendt statistik og ikke-kommutativ algebra} %chktex 8
 \\[0.25cm]
@@ -116,14 +116,19 @@ Liv og Pension}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
-\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, GoCD, Git, Mercurial, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
+\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, Octopus, 
+GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 
 %===============================================================================
 % Kurser
 %===============================================================================
 \begin{onehalfspacing}
 \section{Nyere udvalgte kurser og konferencer}
-\kursus{2019}{PyCon DE \& PyData Berlin }
+\kursus{2021}{Reactive DDD Workshop med Vaughn Vernon}
+
+\kursus{2021}{ Online Masterclass: Strategic Domain-Driven Design med Michael Plöd}
+
+\kursus{2019}{PyCon DE \& PyData Berlin}
 
 \kursus{2018}{Advanced Akka.NET Topics med Aaron Stannard}
 
@@ -140,7 +145,7 @@ Liv og Pension}
 % Frivilligt arbejde
 %===============================================================================
 \section{Frivilligt arbejde}
-\uddannelse{Webmatematik}{Juni 2017 -- Maj 2018\\Maj 2020 --}{Content writer på \href{http://www.webmatematik.dk}{www.webmatematik.dk} og online lektiehjælper} %chktex 8
+\uddannelse{Webmatematik}{Juni 2017 -- Maj 2018\\Maj 2020 --}{Online lektiehjælper og content writer på \href{http://www.webmatematik.dk}{www.webmatematik.dk}} %chktex 8
 \\[0.2cm]
 \uddannelse{Dansk Flygtningehjælp}{Jan 2014 -- Maj 2014}{Lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskoleelever med deres ma\-te\-ma\-tik opgaver} %chktex 8
 
@@ -152,6 +157,5 @@ Liv og Pension}
 %profil for en række anbefalinger. Personlige referencer med tidligere ledere på %forespørgsel.
 
 \section{Personligt}
-Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus syd for Tisvilde Hegn. I min fritid dyrker jeg løb, svømning, crossfit og yoga. Jeg holder af at læse og bruge min hænder til at ordne cykler. Og så selvfølgelig at følge med i nye teknologier.
-
+Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus tæt ved Arresø og Tisvilde Hegn. I min fritid dyrker jeg løb, gravel cykling, crossfit og yoga. Jeg holder af at læse og bruge mine hænder til at ordne cykler. 
 \end{document}
