final english version for chip

--- a/resume.en.tex
+++ b/resume.en.tex
@@ -102,7 +102,7 @@ References available upon request.
 \section{Education}
 \uddannelse{Software Development}{2002 -- 2006}{IT University of Copenhagen. Courses in database and distributed systems, algorithms and data structures, programming languages, and advanced OO programming} %chktex 8
 \\[0.25cm]
-\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance. Host Marco Avellaneda. Reciever of Andersens Scholarship for Mathematicians}
+\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance. Host Marco Avellaneda. Recipient of Andersens Scholarship for Mathematicians}
 \\[0.25cm]
 \uddannelse{Erasmus programme}{1992 -- 1993}{University of Leeds, England. Applied statistics and non-commutative algebra} %chktex 8
 \\[0.25cm]
@@ -112,7 +112,7 @@ References available upon request.
 % Kompetencer
 %===============================================================================
 \section{Skills}
-\kompetence{Programming Languages \\ and frameworks}{Production experience with: Python, C\#, .NET Framework and Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost og C. Knowledge of R, JavaScript, F\#, and Scala}
+\kompetence{Programming Languages \\ and frameworks}{Production experience with: Python, C\#, .NET Framework and Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost and C. Knowledge of R, JavaScript, F\#, and Scala}
 \\[0.2cm]
 \kompetence{Data systems}{SQL Server, MongoDB, Redis, RabbitMQ, and Kafka}
 \\[0.2cm]
@@ -144,7 +144,7 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, and BitBucket
 %===============================================================================
 % Frivilligt arbejde
 %===============================================================================
-\section{Volunteer work}
+\section{Voluntary work}
 \uddannelse{Webmatematik}{June 2017 -- May 2018\\May 2020 --}{Online assistance to students with math homework assignments and content writer for \href{http://www.webmatematik.dk}{www.webmatematik.dk}} %chktex 8
 \\[0.2cm]
 \uddannelse{Danish Refugee Council}{Jan 2014 -- May 2014}{Homework cafe in Vesterbro library, where I assisted primary school students with math assignments.} %chktex 8
@@ -156,7 +156,7 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, and BitBucket
 %Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
 %profil for en række anbefalinger. Personlige referencer med tidligere ledere på %forespørgsel.
 
-\section{Personligt}
+\section{Personal info}
 I am 52 years old and married to Lene. We live in central Copenhagen and have a summer house near Arresø and Tisvilde Hegn in North Sjælland. In my spare time I enjoy running, gravel cycling, crossfit and yoga. I appreciate reading and using my hands when fixing bicycles.
 
 \end{document}
