--- a/resume.tex
+++ b/resume.tex
@@ -6,16 +6,32 @@
 %===============================================================================
 % Kontakt info
 %===============================================================================
-\contactinfo{Carsten Jørgensen}
-{Senior Software Engineer og Arkitekt}
-{Badstuestræde 18D, 1th}
-{1209 København K}
-{+45 2971 2097}
-{\href{mailto:carstenj@gmail.com}{carstenj@gmail.com}}
-{\href{https://carsten-j.github.io/}{https://carsten-j.github.io/}}
+\begin{tabular}{@{}p{10cm} p{5cm} p{2.5cm}@{}}
+    \vspace{0pt}
+    {\LARGE\bfseries C}{\Large\bfseries ARSTEN }{\LARGE\bfseries J}{\Large\bfseries ØRGENSEN}
+    
+    {\Large\bfseries S}{\large\bfseries OFTWAREUDVIKLER}
+
+    Arkitektur, data og analyse
+    &
+    \vspace{0pt} 
+    Badstuestræde 18D 1. th 
+    
+    1209 København K 
+
+    \Telefon{ 29712097}
+
+    \Letter{ \href{mailto:carstenj@gmail.com}{carstenj@gmail.com}}
+    
+    \Mundus{ \href{https://carsten-j.github.io/}{https://carsten-j.github.io/}}
+    &
+    \vspace{0pt}
+    \includegraphics[width=0.1\textwidth]{carsten}
+\end{tabular}
 %==============================================================================
 % Introduktion
 %==============================================================================
+
 \section{Kort fortalt}
 25+ års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (7 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling. Jeg har arbejdet som projektleder, scrum master og løsningsarkitekt. Men jeg vender altid tilbage til udviklerrollen, som er det, jeg brænder allermest for.
 
@@ -26,7 +42,7 @@
 \section{Erhvervserfaring}
 
 \job{Senior Software Developer}{CBB Mobil}{Maj 2020 --}
-{Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af 650000 kunder.
+{Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af 650.000 mobilkunder.
 }
 {
 \opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ}
@@ -126,7 +142,7 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 \section{Nyere udvalgte kurser og konferencer}
 \kursus{2021}{Reactive DDD Workshop med Vaughn Vernon}
 
-\kursus{2021}{ Online Masterclass: Strategic Domain-Driven Design med Michael Plöd}
+\kursus{2021}{Strategic Domain-Driven Design med Michael Plöd}
 
 \kursus{2019}{PyCon DE \& PyData Berlin}
 
@@ -145,7 +161,7 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 % Frivilligt arbejde
 %===============================================================================
 \section{Frivilligt arbejde}
-\uddannelse{Webmatematik}{Juni 2017 -- Maj 2018\\Maj 2020 --}{Online lektiehjælper og content writer på \href{http://www.webmatematik.dk}{www.webmatematik.dk}} %chktex 8
+\uddannelse{Webmatematik}{Maj 2020 --\\Juni 2017 -- Maj 2018}{Online lektiehjælper og skribent på \href{http://www.webmatematik.dk}{www.webmatematik.dk}} %chktex 8
 \\[0.2cm]
 \uddannelse{Dansk Flygtningehjælp}{Jan 2014 -- Maj 2014}{Lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskoleelever med deres ma\-te\-ma\-tik opgaver} %chktex 8
 
