Tilføj nye opgave til CBB

--- a/resume.tex
+++ b/resume.tex
@@ -46,6 +46,7 @@
 }
 {
 \opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ}
+\opgave{integration til ny betalingsløsning}
 }
 
 \job{Senior Risk Manager}{P+, Pension for \\Akademikere}{Juni 2019 -- April 2020}
