--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@ Liv og Pension}
 \opgave{være ansvarlig for teamets software releases og konfigurationsstyring}
 }
 
-\job{Senior Kvantitativ \\ Analytiker}{Nordea Markets}{Oct 1997 -- Sep 2000} %chktex 8
+\job{Senior Kvantitativ \\ Analytiker}{Nordea Markets}{Okt 1997 -- Sep 2000} %chktex 8
 {Som analytiker var jeg med til at}
 {
 \opgave{udvikle funktionalitet og Excel løsninger til Nordea Analytics platformen}
@@ -129,7 +129,7 @@ Liv og Pension}
 % Kompetencer
 %===============================================================================
 \section{Kompetencer}
-\kompetence{Programmingssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
+\kompetence{Programmeringssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
