--- a/resume.en.tex
+++ b/resume.en.tex
@@ -10,7 +10,7 @@
 {Senior Software Engineer}
 {Badstuestræde 18D, 1th}
 {1209 Copenhagen K}
-{+45 2971 2097}
+{+45 29712097}
 {\href{mailto:carstenj@gmail.com}{carstenj@gmail.com}}
 {\href{https://carsten-j.github.io/}{https://carsten-j.github.io/}}
 %==============================================================================
@@ -18,8 +18,7 @@
 %==============================================================================
 
 \section{Summary}
-I have developed large-scale software systems, mainly in the financial sector, for more than 25 years. My main experience is with mathematically based software in the areas of finance, optimization, and supply chain management. I have extensive domain knowledge in the areas of pension funds and life insurance (7 years) banking and capital markets (13 years) and Enterprise Resource Planning systems (5 years). My primary strength is the ability to bridge business and IT and use the knowledge to create usable software solutions. I have also worked as a project manager, scrum master, and solution architect.
-\\[0.2cm]
+I am a T-shaped backend developer with a solid knowledge of creating large-scale software systems for more than 25 years. My primary strengths and interests are the ability to bridge business and IT and use the knowledge to create business and customer value continuously using intelligent tech choices. Furthermore, I am well-versed in modern, agile software development principles and processes. I am comfortable with both devops and support operations and use that feedback to build more robust systems. My main experience is with mathematically based software in the areas of finance, optimization, and supply chain management. I have extensive domain knowledge in the areas of pension funds and life insurance (7 years), banking and capital markets (13 years), and Enterprise Resource Planning systems (5 years). I have also worked as a project manager, scrum master, and solution architect.\\[0.2cm]
 References available upon request.
 
 %==============================================================================
@@ -28,8 +27,14 @@ References available upon request.
 %==============================================================================
 \section{Professionel Experience}
 
+\job{Senior Software Architect and Consultant}{BlueFragments}{Oct 2021 -- }
+{As senior consultant I work with multiple customers to create and modernize their solutions and well as mentor junior developers.}
+{
+\opgave{Modernization project upgrading a Silverlight client to Azure hosted Blazor WASM with minimal changes to existing WCF backend}
+\opgave{Mortgage loan recommendation engine build with ASP.NET Core and C\#}
+}
 
-\job{Senior Software Developer}{CBB Mobil}{May 2020 --}
+\job{Senior Software Developer}{CBB Mobil}{May 2020 -- Sep 2021}
 {Working in the Business Support Software unit, I have shared responsibility for maintaining a platform serving 650.000 mobile subscription customers}
 {
 \opgave{Update online customer experience and payment service provider integration with strong customer authentication under PSD2 regulation}
@@ -39,16 +44,16 @@ References available upon request.
 {As Senior Software Developer in risk management I developed solutions written in Python used for}
 {
 \opgave{Visualization and reporting of financial data}
-\opgave{Managing financial risk based on mathematical models}
+\opgave{Managing financial risk based on mathematical models for VaR and Solvency II}
 \opgave{Implementation of devops CI/CD pipelines based on BitBucket, Bamboo, and Docker}
 }
 
 \job{Chief Software Engineer}{Danske Bank, C\&I}{Jan 2016 -- May 2019}
 {Working in Derivative Risk and IT, my responsibility was 360 degree development of solutions used in}
 {
-\opgave{Real-time reporting of regulatory requirements to external authorities}
+\opgave{MiFID II Real-time reporting of regulatory requirements to external authorities}
 \opgave{Exposing Danske Bank's post-trade solutions as SaaS for external customers}
-\opgave{Managing financial risk based on mathematical models}
+\opgave{Managing financial risk based on mathematical models for VaR}
 }
 
 \job{Solution Architect}{Danmarks Nationalbank}{Nov 2014 -- Dec 2015} %chktex 8
@@ -84,6 +89,7 @@ References available upon request.
 \job{Senior Quantitative \\ Analyst}{Nordea Markets}{Oct 1997 -- Sep 2000} %chktex 8
 {As Quantitative analyst, I participated in}
 {
+\opgave{Implementation of third party Treasury Management System}
 \opgave{Developing functionality for Excel add-ins for the Nordea Analytics platform}
 \opgave{Prepayment and Mortgage-Backed Security modeling}
 }
@@ -102,22 +108,21 @@ References available upon request.
 \section{Education}
 \uddannelse{Software Development}{2002 -- 2006}{IT University of Copenhagen. Courses in database and distributed systems, algorithms and data structures, programming languages, and advanced OO programming} %chktex 8
 \\[0.25cm]
-\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance. Host Marco Avellaneda. Recipient of Andersens Scholarship for Mathematicians}
+\uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Math Finance program by Marco Avellaneda. Recipient of Andersens Travel Grant for Mathematics}
 \\[0.25cm]
-\uddannelse{Erasmus programme}{1992 -- 1993}{University of Leeds, England. Applied statistics and non-commutative algebra} %chktex 8
+\uddannelse{Erasmus+ Programme}{1992 -- 1993}{University of Leeds, England. Applied statistics and non-commutative algebra} %chktex 8
 \\[0.25cm]
-\uddannelse{Msc.}{1988 -- 1995}{University of Copenhagen. Master in mathematics and bachelor in statistics. Focus areas: Numerical analysis and measure theory} %chktex 8
+\uddannelse{Mathematics}{1988 -- 1995}{University of Copenhagen. Master in mathematics and bachelor in statistics. Focus areas: Numerical analysis and measure theory} %chktex 8
 
 %===============================================================================
 % Kompetencer
 %===============================================================================
 \section{Skills}
-\kompetence{Programming Languages \\ and frameworks}{Production experience with: Python, C\#, .NET Framework and Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost and C. Knowledge of R, JavaScript, F\#, and Scala}
+\kompetence{Programming Languages \\ and frameworks}{Production experience with: Python, C\#, .NET Core and Framework, ASP.NET Core, Blazor, WPF, WCF. Knowledge of C\(++\), C, R, JavaScript, F\#, and Scala}
 \\[0.2cm]
 \kompetence{Data systems}{SQL Server, MongoDB, Redis, RabbitMQ, and Kafka}
 \\[0.2cm]
-\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, Octopus, 
-GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, and BitBucket}
+\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, Octopus, Git, Mercurial, GitHub}
 
 %===============================================================================
 % Kurser
@@ -152,11 +157,7 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, and BitBucket
 %===============================================================================
 % Anbefaling og referencer
 %===============================================================================
-%\section{References}
-%Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
-%profil for en række anbefalinger. Personlige referencer med tidligere ledere på %forespørgsel.
-
 \section{Personal info}
-I am 52 years old and married to Lene. We live in central Copenhagen and have a summer house near Arresø and Tisvilde Hegn in North Sjælland. In my spare time I enjoy running, gravel cycling, crossfit and yoga. I appreciate reading and using my hands when fixing bicycles.
+I am 53 years old and married to Lene. We live in central Copenhagen and have a summer house near Arresø and Tisvilde Hegn in North Sjælland. In my spare time I enjoy running, gravel cycling, crossfit and yoga. I appreciate reading and using my hands when fixing bicycles.
 
 \end{document}
