--- a/setup.tex
+++ b/setup.tex
@@ -17,7 +17,7 @@
 \definecolor{linkColor}{HTML}{408AF8}
 \definecolor{bulletColor}{HTML}{3681C4} % 1D8BB9 336F3A
 
-\setmainfont[Ligatures=TeX]{Goldman Sans}[
+\setmainfont[Ligatures=TeX]{Helvetica Neue}[
   BoldFont = Helvetica Neue Bold]
 
 \setlength{\parindent}{0pt}
@@ -39,10 +39,10 @@
     {\Large\scshape #2}
   \end{tabular}
 \end{minipage}
-\begin{minipage}{0.12\textwidth}
-  \centering
-  \includegraphics[width=\textwidth]{carsten}
-\end{minipage}
+% \begin{minipage}{0.12\textwidth}
+%   \centering
+%   \includegraphics[width=\textwidth]{carsten}
+% \end{minipage}
 \hfill
 \begin{minipage}[t][1.5cm][t]{.5\textwidth}
 % \hfill
