--- a/resume.tex
+++ b/resume.tex
@@ -32,8 +32,8 @@
 % Introduktion
 %==============================================================================
 
-\section{Kort fortalt}
-25+ års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (7 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling. Jeg har arbejdet som projektleder, scrum master og løsningsarkitekt. Men jeg vender altid tilbage til udviklerrollen, som er det, jeg brænder allermest for.
+%\section{Kort fortalt}
+%25+ års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med software indenfor områderne finans, optimering, supply chain management og telekommunikation. Omfattende forretningsviden på områderne pension og livsforsikring (7 år), finans, bank og capital markets (13 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden i den ønskede kvalitet, mens min største styrke er at kunne fungere som bindeled mellem forretning og udvikling.
 
 %==============================================================================
 % Erhvervserfaring
@@ -41,17 +41,23 @@
 %==============================================================================
 \section{Erhvervserfaring}
 
-\job{Senior Software Developer}{CBB Mobil}{Maj 2020 --}
+\job{Senior Software Konsulent}{BlueFragments}{Okt 2021 --}
+{I rollen som senior konsulent har jeg kundevendte opgaverne, hvor jeg 
+}
+{
+\opgave{har ansvaret for backend udviklingen og deltager i frontend for et moderniseringsprojekt for en telecom kunde}
+\opgave{sparring og coaching for junior udviklere}
+}
+
+\job{Senior Software Developer}{CBB Mobil}{Maj 2020 -- Sep 2021}
 {Ansat i Business Support Software afdeling, hvor vi har ansvaret for en platform som bruges af 650.000 mobilkunder.
 }
 {
-\opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ}
-\opgave{integration til ny betalingsløsning}
+\opgave{opdatering af online betalingsoplevelse med stærk kundeautentifikation under PSD2 regulativ og integration til ny betalingsløsning}
 }
 
 \job{Senior Risk Manager}{P+, Pension for \\Akademikere}{Juni 2019 -- April 2020}
-{Som senior softwareudvikler indefor risikostyring udviklede jeg software i Python til
-}
+{Som senior softwareudvikler indenfor risikostyring udviklede jeg software i Python til}
 {
 \opgave{visualisering og rapportering af finansielle data}
 \opgave{matematiske modeller til finansiel risikostyring (VaR og Solvens II)}
@@ -118,22 +124,26 @@ Liv og Pension}
 %===============================================================================
 \section{Uddannelse}
 \uddannelse{Softwareudvikling}{2002 -- 2006}{IT Universitetet. Kurser i database og distribuerede systemer, algoritmer og datastrukturer, programmeringssprog samt avanceret objekt-orienteret programmering} %chktex 8
-\\[0.25cm]
+\\[0.2cm]
 \uddannelse{Visiting Member}{1999}{Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance. Vært Marco Avellaneda. Modtager af Andersens Rejselegat for Matematikere}
-\\[0.25cm]
-\uddannelse{Erasmus program}{1992 -- 1993}{University of Leeds, England. Anvendt statistik og ikke-kommutativ algebra} %chktex 8
-\\[0.25cm]
+\\[0.2cm]
+%\uddannelse{Erasmus program}{1992 -- 1993}{University of Leeds, England. Anvendt statistik og ikke-kommutativ algebra} %chktex 8
+%\\[0.25cm]
 \uddannelse{Cand. Scient}{1988 -- 1995}{Københavns Universitet. Hovedfag i matematik og bifag i statistik. Fokusområder: Numerisk analyse og målteori} %chktex 8
 
 %===============================================================================
 % Kompetencer
 %===============================================================================
 \section{Kompetencer}
-\kompetence{Programmeringssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Framework og Core, WPF, WCF, LINQ, ASP.NET Core, C\(++\), STL, Boost og C. Derudover kendskab til F\#, Scala og R}
+\kompetence{Programmeringssprog \\ og frameworks}{Produktionserfaring med: Python, C\#, .NET Core/Framework, Akka.NET, WPF, WCF, C\(++\) og C. Derudover kendskab til F\#, Java, Scala og R}
+\\[0.2cm]
+\kompetence{Web}{ASP.NET Core, Blazor, MVC, Web API, JavaScript}
+\\[0.2cm]
+\kompetence{Cloud}{Primært Microsoft Azure og i mindre grad Google Cloud}
 \\[0.2cm]
 \kompetence{Data systemer}{SQL Server, MongoDB, Redis, RabbitMQ og Kafka}
 \\[0.2cm]
-\kompetence{DevOps tools}{Docker, Ansible, ELK, InfluxDB, Grafana, Octopus, 
+\kompetence{DevOps tools}{Docker, Ansible, Elastic, Kibana, InfluxDB, Grafana, Octopus, 
 GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 
 %===============================================================================
@@ -157,6 +167,9 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 
 \kursus{2014}{Grundlæggende livsforsikringsmatematik (Liv1). Københavns Universitet}
 
+\kursus{2012}{Essential SQL Server 2012 for Developers. DevelopMentor}
+
+\kursus{2010}{Certificeret SCRUM master. Trifork A/S}
 \end{onehalfspacing}
 %===============================================================================
 % Frivilligt arbejde
@@ -174,5 +187,5 @@ GoCD, Git, Mercurial, GitHub, TFS, Vic\-tor\-Ops, Icinga2, Bamboo, BitBucket}
 %profil for en række anbefalinger. Personlige referencer med tidligere ledere på %forespørgsel.
 
 \section{Personligt}
-Jeg er gift med Lene. Vi bor i centrum af København og har et lille sommerhus tæt ved Arresø og Tisvilde Hegn. I min fritid dyrker jeg løb, gravel cykling, crossfit og yoga. Jeg holder af at læse og bruge mine hænder til at ordne cykler. 
+Jeg er gift med Lene. Vi bor i centrum af København og har et sommerhus mellem Arresø og Tisvilde Hegn. I min fritid dyrker jeg løb, gravel cykling, crossfit og yoga. Jeg holder af at læse og bruge mine hænder til at ordne cykler. 
 \end{document}
